2005-10-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Package derived from the original code added to Tcllib.

2004-12-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/parse.bench: ensure file size is consistent between interp
	runs with formatted BOUND string.

2004-12-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/runbench.1: fix doc for -throwerrors [Bug 1091766]

	* runbench.tcl (getInterps): use exec << instead of echo [Bug 1091764]

2004-12-24  Miguel Sofer <msofer@users.sf.net>

	* tcl/namespace.bench: new benchmark, measures the cost of calling
	the same global command alternating different namespaces.

2004-12-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/array.bench (new): array hash benchmarks

	* tcl/file.bench: fix checkall to operate for tclsh <=8.0

	* tcl/string.bench: fix string match -nocase for tclsh <=8.2

	* runbench.tcl (convertVersion): add -globtclsh -globwish file
	path glob opts (tclsh* and wish* by default).
	Normalize soft-links.

	* normbench.tcl (normalize-text): harden time norm check

2003-08-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* normbench.tcl (normalize): correct normalization of new-style
	stats where TclX data is present in output.

2003-02-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/list.bench: lsearch -regexp benchmarks

	* tcl/file.bench: updated with more benchmarks

2003-02-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/startup.bench: replaced by file benchmarks
	* tcl/file.bench: file benchmarks

2002-11-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/regexp.bench: added anchored re tests

	* tcl/klist.bench: allow method filter from command lineinvocation.

	* tcl/list.bench: add lset benchmarks

	* tcl/md5.bench: correct to work with pre-8.2 interps

	* tcl/string.bench: add string growth, remove split benchmarks
	* tcl/split.bench: more split benchmarks

	* runbench.tcl: allow tclsh*/wish* (no version required)

2002-07-24  Miguel Sofer <msofer@users.sourceforge.net>
